correcting package.json

--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "node": "20.x"
   },
   "scripts": {
+    "build": "tsc",
     "start": "node dist/server.js",
-    "postinstall": "tsc && copyfiles -u 1 src/**/*.mustache dist",
+    "postinstall": "npm run build && copyfiles -u 1 src/**/*.mustache dist",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start-dev": "nodemon -e ts,json,mustache src/server.ts"
   },
